--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js - The HTML Presentation Framework</title>
+		<title>DropWizard & Microservices</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+		<meta name="description" content="BlueStar July 2015 Tech Talk on DropWizard and Microservices">
+		<meta name="author" content="Nathan Pruett">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css" id="theme">
+		<link rel="stylesheet" href="css/theme/sky.css" id="theme">
 
 		<!-- Code syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -41,20 +41,36 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Reveal.js</h1>
-					<h3>The HTML Presentation Framework</h3>
+          <img src="images/dropwizard-hat.png"/>
+					<h1>DropWizard</h1>
+					<h2>and Microservices</h2>
 					<p>
-						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
+						<small>Blue Star Software July 2015 TechTalk</small>
 					</p>
+          <p>
+            <small>Nathan Pruett</small>
+          </p>
 				</section>
 
 				<section>
-					<h2>Hello There</h2>
-					<p>
-						reveal.js enables you to create beautiful interactive slide decks using HTML. This presentation will show you examples of what it can do.
-					</p>
+					<h2>What is DropWizard?</h2>
+					<ul>
+            <li>Open source Java framework for developing RESTful web services</li>
+            <li>Available at: <a href="http://www.dropwizard.io">dropwizard.io</a></li>
+					</ul>
 				</section>
-
+        <section>
+          <section>
+            <h2>Really?!? Java?!?</h2>
+            <p class="fragment current-visible fade-out">Yes. Really.</p>
+            <p class="fragment">But don't worry...</p>
+          </section>
+          <section>
+            <h2>This ain't your daddy's enterprise Java...</h2>
+            <img src="images/coffee_ad.jpg" width="40%"/>
+          </section>
+          <section></section>
+        </section>
 				<!-- Example of nested vertical slides -->
 				<section>
 					<section>
@@ -120,29 +136,6 @@
 						</section>
 						```
 					</script>
-				</section>
-
-				<section>
-					<section id="fragments">
-						<h2>Fragments</h2>
-						<p>Hit the next arrow...</p>
-						<p class="fragment">... to step through ...</p>
-						<p><span class="fragment">... a</span> <span class="fragment">fragmented</span> <span class="fragment">slide.</span></p>
-
-						<aside class="notes">
-							This slide has fragments which are also stepped through in the notes window.
-						</aside>
-					</section>
-					<section>
-						<h2>Fragment Styles</h2>
-						<p>There's different types of fragments, like:</p>
-						<p class="fragment grow">grow</p>
-						<p class="fragment shrink">shrink</p>
-						<p class="fragment fade-out">fade-out</p>
-						<p class="fragment current-visible">current-visible</p>
-						<p class="fragment highlight-red">highlight-red</p>
-						<p class="fragment highlight-blue">highlight-blue</p>
-					</section>
 				</section>
 
 				<section id="transitions">
@@ -369,10 +362,11 @@ Reveal.addEventListener( 'customevent', function() {
 
 				<section style="text-align: left;">
 					<h1>THE END</h1>
-					<p>
-						- <a href="http://slides.com">Try the online editor</a> <br>
-						- <a href="https://github.com/hakimel/reveal.js">Source code &amp; documentation</a>
-					</p>
+					<ul>
+						<li>Presentation built using <a href="http://lab.hakim.se/reveal-js/">Reveal.js</a> </li>
+						<li>Hosted in a <a href="http://www.dropwizard.io">DropWizard</a> instance using the <a href="http://www.dropwizard.io/0.8.1/dropwizard-assets/">dropwizard-assets</a> module</li>
+            <li>Source available at:</br><a href="https://github.com/nepruett/dropwizard-presentation">github.com/nepruett/dropwizard-presentation</a></li>
+					</ul>
 				</section>
 
 			</div>
