--- a/index.html
+++ b/index.html
@@ -522,19 +522,46 @@ java -jar target/hello-1.0-SNAPSHOT.jar
 				</section>
 
         <section>
-          <h2>Moving on from what DropWizard <em>is</em> to what it's <em>for</em>...</h2>
+          <h2>So what is DropWizard <em>for</em>...</h2>
         </section>
 
         <section>
-          <section>
-            <p>Current uses...</p>
-          </section>
+          <p>"Duct Tape" projects...</p>
+          <img src="images/duct_tape.jpg"/>
+          <ul>
+            <li>I have a couple (or more) web services to consolidate...</li>
+            <li>I have a web service that <em>almost</em> does what I want...</li>
+            <li>I have some data/a JAR library that I want to expose as a REST service...</li>
+          </ul>
+        </section>
+
+        <section>
+          <p>JS SPA Backend...</p>
+          <img src="images/js_spa_frameworks.jpg"/>
+          <ul>
+            <li>dropwizard-assets</li>
+          </ul>
         </section>
 
         <section>
           <section>
             <h2>Microservices</h2>
           </section>
+        </section>
+
+        <section  style="text-align: left;">
+          <p>Microservice supportive libraries/tools:</p>
+          <ul>
+            <li><a href="http://netflix.github.io/">Netflix OSSC</a></li>
+          </ul>
+
+          <p>Similar projects:</p>
+          <ul>
+            <li><a href="http://projects.spring.io/spring-boot/">Spring Boot</a> - Pivotal/Spring</li>
+            <li><a href="https://jhipster.github.io/">JHipster</a> - Spring Boot & AngularJS</li>
+            <li><a href="http://wildfly.org/swarm/">Wildfly Swarm</a> - Redhat/JBoss</li>
+            <li><a href="https://github.com/advantageous/qbit">QBit</a> - Queue based</li>
+          </ul>
         </section>
 
 				<section style="text-align: left;">
